STDMDD-906: aggiunta documentazione della property che permette di impostare il root package java
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@3632 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -412,7 +412,21 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  	<i>struts2Basic.oaw e struts2BasicSingleModule.oaw </i></td>
 	  </tr>
 	  
-	  
+	  <tr>
+	  <td><code>guigen.javaPackageOrganizationName</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: serve per impostare un differente prefisso per i package java.
+	  	se non impostato il prefisso di default &egrave; quello standard CSIPiemonte, ovvero
+	  	<i>it.csi</i>.
+	  	</li>
+   		<li>default: null</li>
+	  	</ul>
+	  </td>
+	  <td><code>com.acme</code></td>
+	  <td>
+	  	<i>struts2Basic.oaw e struts2BasicSingleModule.oaw </i></td>
+	  </tr>
 	  
 	  </tbody>
 </table>
