STDMDD-907: aggiunta doc. property guigen.ivyRepositoryHost
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@3635 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/cartridges.html
+++ b/html/guigen/cartridges.html
@@ -428,6 +428,22 @@ contenga tutti gli <b>ApplicationModule</b> modificati nel modello</li>
 	  	<i>struts2Basic.oaw e struts2BasicSingleModule.oaw </i></td>
 	  </tr>
 	  
+	  <tr>
+	  <td><code>guigen.ivyRepositoryHost</code></td>
+	  <td>
+	  	<ul>
+	  	<li>scopo: serve per impostare un differente host come repository per ivy.
+	  	Se non impostato l'host di default &egrave; quello standard CSIPiemonte, ovvero
+	  	<i>repart.csi.it</i>.
+	  	</li>
+   		<li>default: null</li>
+	  	</ul>
+	  </td>
+	  <td><code>myrepository.acme.com</code></td>
+	  <td>
+	  	<i>struts2Basic.oaw e struts2BasicSingleModule.oaw </i></td>
+	  </tr>
+	  
 	  </tbody>
 </table>
 </p>
