STDMDD-1057: servicegen: migrazione oaw -> m2t : documentazione
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4061 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/esposizione_multiportale/index.html
+++ b/html/guigen/guides/esposizione_multiportale/index.html
@@ -18,7 +18,7 @@
       <li>la potenziale differenziazione della rete telematica dalla quale l'applicazione dovr&agrave;
       essere raggiungibile (es. internet vs intranet)</li>
       <li>la potenziale differenziazione del parco di utenza dell'applicativo (es. cittadino vs personale della P.A);</li>
-      <li>la potenziale differenziazione del livello di autenticazione richiesto (es. nessuna autenticazione vs 
+      <li>la potenziale differenziazione del livello di autenticazione richiesto (es. nessuna autenticazione vs
       autenticazione con credenziali testuali vs autenticazione con certificato digitale...);</li>
       <li>la potenziale differenziazione dell'aspettto grafico delle schermate.</li>
       </ul>
@@ -35,7 +35,7 @@
       sia la medesima su tutti i portali di esposizione</li>
       <li> <img src="../../img/yes.gif"></img> differenziazione dell'apparenza grafica: &egrave; realizzata
       tramite l'utilizzo a runtime di uno skin differente sulla stessa struttura di HTML; &egrave; pertanto
-      possibile personalizzare esclusivamente ci&ograve; che &egrave; possibile specificare con gli strumenti della 
+      possibile personalizzare esclusivamente ci&ograve; che &egrave; possibile specificare con gli strumenti della
       stilizzazione <i>CSS</i>.</li>
       </ul>
       </p>
@@ -67,7 +67,7 @@
       </ul>
       </p>
       <h3>Portal profiles</h3>
-      <p>Dal punto di vista degli strumenti MDD ciascun portale &egrave; caratterizzato da un certo numero di 
+      <p>Dal punto di vista degli strumenti MDD ciascun portale &egrave; caratterizzato da un certo numero di
       informazioni che ne descrivono i codici identificativi, l'insieme delle librerie JS utilizzate per le
       funzioni di front-end, l'insieme delle risorse statiche che costituiscono lo skin.</p>
       <p>Queste caratteristiche sono mantenute, ad uso principalemnte della modellazione guigen, ma non solo,
@@ -75,7 +75,7 @@
       esiste una versione di questo modello che ne descrive le caratteristiche.</p>
       <p>I <b>Portal Profiles</b> sono modelli <i>utilizzati</i> da chi modella le applicazioni, ma la loro
       <i>predisposizione</i> &egrave; a carico di chi cura l'evoluzione delle componenti infrastrutturali di portale, ovver
-      <i>skin</i> e <i>librerie javascript</i>: sar&agrave; cusa di questi ultimi mettere a disposizione di chi 
+      <i>skin</i> e <i>librerie javascript</i>: sar&agrave; cusa di questi ultimi mettere a disposizione di chi
       sviluppa l'applicazione le corrette configurazioni.</p>
       <p>A titolo informativo si riporta di seguito l'elenco delle informazioni principali che fanno parte
       del <b>Portal Profile</b>:
@@ -97,14 +97,14 @@
       ciascuno di questi elementi:
       	<ul>
       	<li>referenzia il modello di <b>PortalProfile</b> corrispondente al portale</li>
-      	<li>specifica il codice dell'area tematica sulla quale, per quel portale, deve essere 
+      	<li>specifica il codice dell'area tematica sulla quale, per quel portale, deve essere
       	esposto l'applicativo (non &egrave; detto che per due portali differenti l'area tematica
-      	sia la stessa n&egrave; che tutti i portali possiedano il concetto di differenziazione 
+      	sia la stessa n&egrave; che tutti i portali possiedano il concetto di differenziazione
       	in aree tematiche). Nel caso in cui il portale non preveda area tematica viene assunta
       	l'area tematica di default 'general'</li>
       	</ul>
       </li>
-      <li>configurare il richiamo della cartuccia <i>webres.oaw</i> tante volte quanti sono i portali
+      <li>configurare il richiamo della cartuccia <i>webres.mwe</i> tante volte quanti sono i portali
       di esposizione, utilizzando un <i>targetProjectPrefix</i> che contenga un suffisso identificativo
       del portale a cui il progetto fa riferimento (es.: <b>myappsisp</b> -&gt; <b>myappsisp</b>webres, <b>myapprp</b> -&gt; <b>myapprp<</b>webres)</li>
       </ol>
