--- a/html/guigen/guides/guides.html
+++ b/html/guigen/guides/guides.html
@@ -18,6 +18,7 @@
 	  <ul>
 	  <li><a href="stilizzazione_grafica/index.html">Stilizzazione grafica delle applicazioni</a></li>
 	  <li><a href="esposizione_multiportale/index.html">Esposizione <i>multi-portale</i> delle applicazioni</a></li>
+	  <li><a href="interazione_applicazioni/index.html">Interazione tra differenti applicazioni a livello di U.I</a></li>
 	  <li><a href="wysiwyg_editor/index.html">Visualizzatore WYSIWYG di schermate</a></li>
 	  </ul>
 	  </p>     
