STDMDD-1111: best practices modularizzazione guigen
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4258 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/guides.html
+++ b/html/guigen/guides/guides.html
@@ -16,6 +16,7 @@
 	  <p>
 	  Le guide attualmente disponibili sono le seguenti:
 	  <ul>
+	  <li><a href="modularizzazione/index.html">Modularizzazione: buone pratiche</a></li>
 	  <li><a href="stilizzazione_grafica/index.html">Stilizzazione grafica delle applicazioni</a></li>
 	  <li><a href="esposizione_multiportale/index.html">Esposizione <i>multi-portale</i> delle applicazioni</a></li>
 	  <li><a href="interazione_applicazioni/index.html">Interazione tra differenti applicazioni a livello di U.I</a></li>
