--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -43,12 +43,12 @@
       
       <tr>
 	  <td class="featureOperation">ON_INIT</td>
-	  <td class="featureDescr">Esecuzione di un Action Event una sola volta per sessione applicativa
-	  <br>Logiche che devono essere eseguite al primo ingresso sul ContentPanel corrente
+	  <td class="featureDescr">Esecuzione di un Action Event una sola volta per sessione applicativa, ossia esecuzione di logiche applicative ad ogni primo ingresso sul ContentPanel.
 	  </td>
 	  <td class="featureDescr">Caricamento Combo dal contenuto immutabile (es. elenco regioni)
 	  </td>
-	  <td class="featureDescr">Sul prepare() della action viene invocato il metodo per la gestione della logica dell' ON_INIT. Questo dovr&agrave; preceduto da un test su una variabile di sessione che controller&agrave; se si tratta di un primo accesso.</td>
+	  <td class="featureDescr">Sul prepare() della action viene invocato il metodo per la gestione della logica dell' ON_INIT. 
+	  Questo &egrave; preceduto da un test su una variabile di sessione che controller&agrave; se si tratta di un primo accesso.</td>
 	  <td class="featureDescr">
 	  <ol type="disc">    
 	  <li>un ContentPanel non pu&ograve; contenere pi&ugrave; di un CPCommand di tipo ON_INIT
@@ -57,8 +57,7 @@
       
       <tr>
 	  <td class="featureOperation">ON_REFRESH</td>
-	  <td class="featureDescr">Esecuzione di un ActionEvent ad ogni refresh della pagina
-	  <br>Logiche che devono essere rieseguite dopo ogni azione svolta in pagina (init, esecuzione EventHandler), 
+	  <td class="featureDescr">Esecuzione di un ActionEvent ad ogni refresh della pagina, ossia esecuzione logiche applicative dopo ogni azione svolta in pagina (init, esecuzione EventHandler)
 	  </td>
 	  <td class="featureDescr">Gestione messaggi errori in pagina
 	  </td>
@@ -76,10 +75,11 @@
 	  <tr>	  
 	  <td class="featureOperation">ON_ENTER</td>
 	  <td class="featureDescr">Esecuzione di un Action Event ad ogni nuovo accesso a una schermata (es. JumpCommand da voce di menu)
-	  <br>Si differenzia dal ON_REFRESH perch&egrave; non viene scatenato ad ogni ricaricamento della pagina ma solo quando viene effettuato un nuovo accesso alla schermata.
-	  <br>Logiche che dovranno essere eseguite ad ogni nuovo accesso in pagina e dipendenti dal flusso di navigazione precedente.</td>
-	  <td class="featureDescr"> Precaricamento dati in schermata </td>
-	  <td class="featureDescr">La gestione del On_ENTER viene fatta sull' execute() della action, ossia il metodo che viene invocato dal controller quando riceve una nuova richiesta</td>
+	  <br>Si differenzia dal ON_REFRESH perch&egrave; le logiche non vengono eseguite ad ogni ricaricamento della pagina 
+	  ma solo quando viene effettuato un nuovo accesso giungendo da un' altra schermata (ossia logiche dipendenti dal flusso di navigazione).
+	  </td>
+	  <td class="featureDescr">Precaricamento dati in schermata </td>
+	  <td class="featureDescr">La gestione del ON_ENTER viene fatta sull' execute() della action, ossia il metodo che viene invocato dal controller quando riceve una nuova richiesta</td>
 	  <td class="featureDescr">
 	  <ol type="disc">    
 	  <li>un ContentPanel non pu&ograve; contenere pi&ugrave; di un CPCommand di tipo ON_ENTER
@@ -88,8 +88,8 @@
 	  
 	  <tr>
 	  <td class="featureOperation">BEFORE_EVENTS</td>
-	  <td class="featureDescr">Esecuzione di un Action Event prima dell' esecuzione della logica di un eventHandler (es. prima dell'esecuzione del command associato a un button)
-	  <br>Logiche che dovranno essere eseguite prima del doCommand di ogni EventHandler in pagina
+	  <td class="featureDescr">Esecuzione di un Action Event prima dell' esecuzione della logica di un eventHandler, 
+	  ossia logiche che dovranno essere eseguite prima del doCommand di ogni EventHandler in pagina
 	  </td>
 	  <td class="featureDescr">Validazione dati
 	  </td>
@@ -103,8 +103,9 @@
 	  
 	  <tr>
 	  <td class="featureOperation">AFTER_EVENTS</td>
-	  <td class="featureDescr">Esecuzione di un Action Event dopo dell' esecuzione della logica di un eventHandler (es. prima dell'esecuzione del command associato a un button)
-	  <br> Logiche che dovranno essere eseguite prima del doCommand di ogni EventHandler in pagina
+	  <td class="featureDescr">Esecuzione di un Action Event dopo l' esecuzione della logica di un eventHandler, 
+	  ossia logiche che dovranno essere eseguite dopo il doCommand di ogni EventHandler in pagina
+	  </td>
 	  <td class="featureDescr">Tracciatura WARN e ERROR</td>
 	  <td class="featureDescr">Gestione introdotta sul metodo handle, associato ad ogni eventHandler, prima dell'invocazione del doCommand </td>
 	  <td class="featureDescr">
