--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -31,7 +31,8 @@
       
       Nell' immagine seguente un esempio di modellazione.  
       <br>
-      TODO: INSERIRE IMMAGINE
+        <br>
+      <img alt="Esempio CPCommand" src=".//img/CPCommandeEsempio.png" border="1px" title="Esempio CPCommand" >
       <br>
       <br>
       <br>
