git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4397 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -73,7 +73,7 @@
 	  <td class="featureDescr">Esecuzione di un ActionEvent ad ogni refresh della pagina, ossia esecuzione logiche applicative dopo ogni azione svolta in pagina (init, esecuzione EventHandler)
 	  <br>NOTE:
 	  <br>Se in pagina viene inserito un CPCommand ON_INIT allora l'ON_REFRESH non verr&agrave; eseguito al primo accesso.
-	  <br>La logica associata all' ON_REFRESH è analoga a quella eseguita dal <i>onRefreshCommand</i> il quale andrà gradualmente dismesso. 	  
+	  <br>La logica associata all' ON_REFRESH &egrave; analoga a quella eseguita dal <i>onRefreshCommand</i> il quale andr&agrave; gradualmente dismesso. 	  
 	  </td>
 	  <td class="featureDescr">
 	  In questo punto andranno introdotte tutte le operazioni che testano l'eveluzione del ContentPanel dopo ogni singolo evento
