git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4404 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -161,7 +161,7 @@
 					esecuzione della logica di un eventHandler</td>
 				<td class="featureDescr"></td>
 				<td class="featureDescr">Gestione introdotta sul metodo handle,
-					associato ad ogni eventHandler, prima dell'invocazione del
+					associato ad ogni eventHandler, dopo l'invocazione del
 					doCommand</td>
 				<td class="featureDescr">
 					<ol type="disc">
