STDMDD-1136 Correzione incoerenze con il codice implementato
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4417 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/guides/logiche_contentPanel/index.html
+++ b/html/guigen/guides/logiche_contentPanel/index.html
@@ -101,7 +101,7 @@
 					eseguita ad ogni richiamo della action. <br>Se sono modellati contemporaneamente sia
 					l'ON_INIT che l'ON_REFRESH, poich&egrave; il metodo <code>prepare()</code> viene
 					invocato prima dell'esecuzione della action, per fare in modo che l'esecuzione della logica
-					avvenga solo negli accessi successivi al primo viene testata la variabile onRefreshEvent. 
+					avvenga solo negli accessi successivi al primo vengono testate la variabile in sessione <code>CPCommandInit<i>&lt;ContentPanel.name&gt;</i></code> e <code>currentContentPanel</code>
 					
 					
 				<td class="featureDescr">
