STDMDD-652 / STDMDD-653 Aggiornameto documentazione
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4428 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/metamodeldoc/html/guigen/classes/VisibilityCommand.html
+++ b/html/guigen/metamodeldoc/html/guigen/classes/VisibilityCommand.html
@@ -7,7 +7,7 @@
 	</head><body>
 <h1>Class "guigen :: VisibilityCommand"</h1>
 <p>Defined in package : <img src="../../icons/ecore/EPackage.gif" /><a href="../../guigen/package.html">guigen</a></p>
-<p>Permette di mostrare/nascondere i widget specificati. Lo stato di visibilit&agrave;
+<p>Permette di mostrare/nascondere i widget e\o menu specificati. Lo stato di visibilit&agrave;
 rimane persistente in sessione.</p>
 
 
