--- a/html/guigen/metamodeldoc/html/guigen/classes/ONOFFCommand.html
+++ b/html/guigen/metamodeldoc/html/guigen/classes/ONOFFCommand.html
@@ -7,7 +7,7 @@
 	</head><body>
 <h1>Class "guigen :: ONOFFCommand"</h1>
 <p>Defined in package : <img src="../../icons/ecore/EPackage.gif" /><a href="../../guigen/package.html">guigen</a></p>
-<p>Permette di abilitare/disabilitare i widget specificati. Lo stato di abilitazione
+<p>Permette di abilitare/disabilitare i widget e\o menu specificati. Lo stato di abilitazione
 rimane persistente in sessione.</p>
 
 
