STDMDD-652 / STDMDD-653 Aggiornameto documentazione
git-svn-id: http://subversion.csi.it:10090/workarea/mddtools/guigen.docs/trunk@4429 be04b910-fd5c-0410-891f-bca81b977169

--- a/html/guigen/faq/faq_dinamiche_ui.html
+++ b/html/guigen/faq/faq_dinamiche_ui.html
@@ -143,7 +143,7 @@
      <div class="faq_answer">
      <p><b>A:</b> La differenza fondamentale tra le due modalit&agrave; sta nel fatto che i comandi
      <b>ONOFFCommand</b> e <b>VisibilityCommnad</b> agiscono puntualmente su un insieme (anche ridotto)
-     di widget, mentre lo <b>ScreenStateCommand</b> permette di effettuare lo switch di <b>ScreenState</b>
+     di widget e\o menu, mentre lo <b>ScreenStateCommand</b> permette di effettuare lo switch di <b>ScreenState</b>
      che rappresenta un set completo di abilitazioni/disabilitazioni dei widget contenuti nella
      schermata. 
 	 </p>
